kubernetes/manifests/monitoring/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
  name: grafana-ingress
  namespace: grafana
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - "grafana.vipyrsec.com"
    secretName: grafana-tls
  rules:
  - host: grafana.vipyrsec.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
